--- a/page.html
+++ b/page.html
@@ -3,7 +3,7 @@
     <head>
         <title>ASWIN U</title>
     </head>    
-    <body bgcolor="#242424" style="top: 0%;">
+    <body bgcolor="#242424" style="top: 0%; left:10px;">
         <div style="width: 5%;height: 100%; background-color: #242424;">
             
         </div>
