--- a/page.html
+++ b/page.html
@@ -91,7 +91,7 @@
             <p style="color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 10px;"><u>Projects</u></p>
             <center>
             <div style="display: inline-block;
-            float: left; min-width: 600px; background-color: black; border-radius: 20px;">
+            float: left; max-width:500px; background-color: black; border-radius: 20px;">
             
             <p style="color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">Heart Disease Prediction Using Machine Learning</p>
             <p style="max-width: 500px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">A Python-based machine learning project. With some health data,it determine whether a person has a likelihood of developing heart disease.</p>
