--- a/page.html
+++ b/page.html
@@ -98,7 +98,7 @@
             </div>
         
             <div style="display: inline-block;
-            float: left; max-width: 400px;border-radius: 20px;">
+            float: left; max-width: 400px;border-radius: 20px; left-margin: 20px">
             <p style="max-width: 250px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">Diabetic Retinopathy Detection Using Deep Learning</p>
             <p style="max-width: 250px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">A Deep Learning Based Project done using Python.The system will forecast the stage of diabetic retinopathy using a fundus image as input.</p>
         </center>    
