--- a/page.html
+++ b/page.html
@@ -147,5 +147,20 @@
             </div>
             
         </section>
+         <section id="Contact" style="width: 100%; display: inline-block;
+        float: left; right: 10%;
+        margin-right: 10px;">
+            <p style="color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 10px;"><u>Contact</u></p>
+            <div style="display: inline-block;
+            float: left;width: 300px;">
+            <p style="max-width: 250px;line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">Mobile</p>
+            <p style="max-width: 250px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">+918330046110</p>
+            </div>
+            <div style="display: inline-block;
+            float: left; width: 300px;">
+            <p style="max-width: 250px;line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">Email</p>
+            <p style="max-width: 250px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">aswinupkd@gmail.com</p>
+            </div> 
+        </section>
     </body>
 </html>
