--- a/page.html
+++ b/page.html
@@ -31,7 +31,7 @@
             float: left; max-width: 600px;">
             <br>
             <p style="margin-bottom: 10px;color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 1rem;">ASWIN U</p>
-            <p style="color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 1rem;">I'm a Graduate in B.Tech. computer science and engineering. Seeking a challenging position in a dynamic work environment that encourages continuous learning and offers opportunities for personal and professional growth. I ampassionate about leveraging new technologies and expanding my knowledge.<br><b>Contact Mob: +91 8330046110,<br> Email: aswinupkd@gmail.com</b>b</p>
+            <p style="color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 1rem;">I'm a Graduate in B.Tech. computer science and engineering. Seeking a challenging position in a dynamic work environment that encourages continuous learning and offers opportunities for personal and professional growth. I am passionate about leveraging new technologies and expanding my knowledge. <br><b>Contact Mob: +91 8330046110,<br> Email: aswinupkd@gmail.com</b></p>
             </div>
         </div>
         <br>
