--- a/page.html
+++ b/page.html
@@ -42,7 +42,7 @@
         margin-right: 10px;">
             <p style="margin-bottom: 10px;color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 10px;"><u>Education</u></p>
             <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">B.Tech Computer Science and Engineering (2019-2023)</p>
-            <p style="color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Ahalia School of Engineering and Technology<br>CGPA : 7.48</p>
+            <p style="color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Ahalia School of Engineering and Technology<br>CGPA : 7.58</p>
             <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">12th (2017-19)</p>
             <p style="color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Vyasa Vidya Peethom<br>Percentage : 71.3%</p>
             <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">10th(2016-2017)</p>
@@ -147,6 +147,19 @@
             </div>
             
         </section>
+        <section id="Public_Profiles" style="width: 100%; display: inline-block;
+        float: left; right: 10%;
+        margin-right: 10px;">
+            <p style="color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 10px;"><u>Profile Links</u></p>
+            <div style="display: inline-block;
+            float: left;width: 300px;">
+            <a href="https://www.linkedin.com/in/aswin-aukzone" style="max-width: 250px;line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">Mobile</a>
+            </div>
+            <div style="display: inline-block;
+            float: left; width: 300px;">
+            <a href="https://github.com/gitsourceaswin" style="max-width: 250px;line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">GitHub</a>
+            </div> 
+        </section>
          <section id="Contact" style="width: 100%; display: inline-block;
         float: left; right: 10%;
         margin-right: 10px;">
@@ -162,5 +175,6 @@
             <p style="max-width: 250px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">aswinupkd@gmail.com</p>
             </div> 
         </section>
+        
     </body>
 </html>
