--- a/page.html
+++ b/page.html
@@ -153,7 +153,7 @@
             <p style="color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 10px;"><u>Profile Links</u></p>
             <div style="display: inline-block;
             float: left;width: 300px;">
-            <a href="https://www.linkedin.com/in/aswin-aukzone" style="max-width: 250px;line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">Mobile</a>
+            <a href="https://www.linkedin.com/in/aswin-aukzone" style="max-width: 250px;line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">LinkedIn</a>
             </div>
             <div style="display: inline-block;
             float: left; width: 300px;">
