--- a/page.html
+++ b/page.html
@@ -172,7 +172,7 @@
             <div style="display: inline-block;
             float: left; width: 300px;">
             <p style="max-width: 250px;line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">Email</p>
-            <p style="max-width: 250px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">aswinupkd@gmail.com</p>
+            <a href="aswinupkd@gmail.com" style="max-width: 250px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">aswinupkd@gmail.com</p>
             </div> 
         </section>
         
