--- a/page.html
+++ b/page.html
@@ -3,7 +3,7 @@
     <head>
         <title>ASWIN U</title>
     </head>    
-    <body bgcolor="#242424" style="top: 0%; left:10px;">
+    <body bgcolor="#242424" style="top: 0%; left:10px;padding-left:25px;padding-right: 25px;">
         <div style="width: 5%;height: 100%; background-color: #242424;">
             
         </div>
@@ -23,9 +23,8 @@
         <div style=" display: inline; vertical-align: middle; vertical-align: middle;">
             <div style="display: inline-block;
             float: left;">
-            <img src="AUK.png">
+            <img src="AUK1.png">
             </div>
-            <br>
             <br>
             <div style="display: inline-block;
             float: left; max-width: 600px;">
