--- a/page.html
+++ b/page.html
@@ -38,8 +38,7 @@
         <br>
         <br>
         <section id="Education" style="width: 100%; display: inline-block;
-        float: left; right: 10%;
-        margin-right: 10px;">
+        float: left;">
             <p style="margin-bottom: 10px;color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 10px;"><u>Education</u></p>
             <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">B.Tech Computer Science and Engineering (2019-2023)</p>
             <p style="color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Ahalia School of Engineering and Technology<br>CGPA : 7.58</p>
