--- a/page.html
+++ b/page.html
@@ -38,15 +38,31 @@
         <br>
         <br>
         <section id="Education" style="width: 100%; display: inline-block;
-        float: left;">
-            <p style="margin-bottom: 10px;color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 10px;"><u>Education</u></p>
-            <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">B.Tech Computer Science and Engineering (2019-2023)</p>
-            <p style="color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Ahalia School of Engineering and Technology<br>CGPA : 7.58</p>
-            <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">12th (2017-19)</p>
-            <p style="color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Vyasa Vidya Peethom<br>Percentage : 71.3%</p>
-            <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">10th(2016-2017)</p>
-            <p style="color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Vyasa Vidya Peethom<br>CGPA : 8.8</p>
+        float: left; right: 10%;
+        margin-right: 10px;">
+            <p style="color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 10px;"><u>Academic Qualifications</u></p>
+            <div style="display: inline-block;
+            float: left;width: 300px;">
+            <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">M.Tech Computer Science and Engineering (2023-25)</p>
+            <p style="line-height: 0px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Amrita Vishwa Vidyapeethom, Coimbatore, Tamilnadu</p>
+            </div>
+            <div style="display: inline-block;
+            float: left; width: 300px;">
+            <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">B.Tech Computer Science and Engineering(2019-23)</p>
+            <p style="line-height: 0px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Ahalia School of Engineering and Technology, Palakkad, Kerala<br>CGPA : 7.58 (75.8%)</p>
+            </div>
+            <div style="display: inline-block;
+            float: left;width: 300px;">
+            <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">12th </p>
+            <p style="line-height: 0px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Vyasa Vidya Peethom, Palakkad, Kerala<br>Percentage: 71.3</p>
+            </div>
+            <div style="display: inline-block;
+            float: left;width: 300px;">
+            <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">10th</p>
+            <p style="line-height: 0px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Vyasa Vidya Peethom, Palakkad, Kerala<br>CGPA: 8.8 (83.6%)</p>
+            </div>
         </section>
+
         <section id="Skill" style="width: 100%; display: inline-block;
         float: left; right: 10%;
         margin-right: 10px;">
