--- a/page.html
+++ b/page.html
@@ -24,7 +24,7 @@
             <div style="display: inline-block;
             float: left;">
             <br>
-            <img src="AUK1.png">
+            <img src="AUK.png">
             </div>
             <br>
             <div style="display: inline-block;
@@ -42,24 +42,24 @@
         margin-right: 10px;">
             <p style="color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 10px;"><u>Academic Qualifications</u></p>
             <div style="display: inline-block;
-            float: left;width: 300px;">
-            <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">M.Tech Computer Science and Engineering (2023-25)</p>
-            <p style="line-height: 0px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Amrita Vishwa Vidyapeethom, Coimbatore, Tamilnadu</p>
+            float: left;width: 45%;">
+            <p style="line-height: auto;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">M.Tech Computer Science and Engineering (2023-25)</p>
+            <p style="color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Amrita Vishwa Vidyapeethom, Coimbatore, Tamilnadu</p>
             </div>
             <div style="display: inline-block;
-            float: left; width: 300px;">
-            <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">B.Tech Computer Science and Engineering(2019-23)</p>
-            <p style="line-height: 0px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Ahalia School of Engineering and Technology, Palakkad, Kerala<br>CGPA : 7.58 (75.8%)</p>
+            float: left; width: 45%;">
+            <p style="line-height: auto;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">B.Tech Computer Science and Engineering(2019-23)</p>
+            <p style="color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Ahalia School of Engineering and Technology, Palakkad, Kerala<br>CGPA : 7.58 (75.8%)</p>
             </div>
             <div style="display: inline-block;
-            float: left;width: 300px;">
-            <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">12th </p>
-            <p style="line-height: 0px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Vyasa Vidya Peethom, Palakkad, Kerala<br>Percentage: 71.3</p>
+            float: left;width: 45%;">
+            <p style="line-height: auto;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">12th </p>
+            <p style="color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Vyasa Vidya Peethom, Palakkad, Kerala<br>Percentage: 71.3</p>
             </div>
             <div style="display: inline-block;
-            float: left;width: 300px;">
-            <p style="line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">10th</p>
-            <p style="line-height: 0px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Vyasa Vidya Peethom, Palakkad, Kerala<br>CGPA: 8.8 (83.6%)</p>
+            float: left;width: 45%;">
+            <p style="line-height: auto;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">10th</p>
+            <p style="color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">Vyasa Vidya Peethom, Palakkad, Kerala<br>CGPA: 8.8 (83.6%)</p>
             </div>
         </section>
 
@@ -167,11 +167,11 @@
         margin-right: 10px;">
             <p style="color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 10px;"><u>Profile Links</u></p>
             <div style="display: inline-block;
-            float: left;width: 300px;">
+            float: left;width: 45%;">
             <a href="https://www.linkedin.com/in/aswin-aukzone" style="max-width: 250px;line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">LinkedIn</a>
             </div>
             <div style="display: inline-block;
-            float: left; width: 300px;">
+            float: left; width: 45%;">
             <a href="https://github.com/gitsourceaswin" style="max-width: 250px;line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">GitHub</a>
             </div> 
         </section>
@@ -180,12 +180,12 @@
         margin-right: 10px;">
             <p style="color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 10px;"><u>Contact</u></p>
             <div style="display: inline-block;
-            float: left;width: 300px;">
+            float: left;width: 45%;">
             <p style="max-width: 250px;line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">Mobile</p>
             <p style="max-width: 250px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">+918330046110</p>
             </div>
             <div style="display: inline-block;
-            float: left; width: 300px;">
+            float: left; width: 45%;">
             <p style="max-width: 250px;line-height: 0px;color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 10px;">Email</p>
             <p style="max-width: 250px;color: #afb2b1; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 16px; left: 1rem; right: 8px;">aswinupkd@gmail.com</p>
             </div> 
