--- a/page.html
+++ b/page.html
@@ -22,13 +22,13 @@
         <br><br><br><br>
         <div style=" display: inline; vertical-align: middle; vertical-align: middle;">
             <div style="display: inline-block;
-            float: left;">
+            float: left; max-width: 40%;">
             <br>
             <img src="AUK.png">
             </div>
             <br>
             <div style="display: inline-block;
-            float: left; max-width: 600px;">
+            float: left; max-width: 50%;">
             <br>
             <p style="margin-bottom: 10px;color: #d7c1f8; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 36px; left: 1rem; right: 1rem;">ASWIN U</p>
             <p style="color: white; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; vertical-align: middle; font-size: 20px; left: 1rem; right: 1rem;">I'm a Graduate in B.Tech. computer science and engineering. Seeking a challenging position in a dynamic work environment that encourages continuous learning and offers opportunities for personal and professional growth. I am passionate about leveraging new technologies and expanding my knowledge. <br><b>Mob:</b> +91 8330046110<br> <b>Email:</b> aswinupkd@gmail.com</p>
